--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:scenarios": "vitest run --reporter=default --reporter=./src/__tests__/logReporter.ts scenarios",
+    "test": "NODE_OPTIONS=--experimental-require-module vitest run",
+    "test:watch": "NODE_OPTIONS=--experimental-require-module vitest",
+    "test:coverage": "NODE_OPTIONS=--experimental-require-module vitest run --coverage",
+    "test:scenarios": "NODE_OPTIONS=--experimental-require-module vitest run --reporter=default --reporter=./src/__tests__/logReporter.ts scenarios",
     "test:e2e": "playwright test"
   },
   "dependencies": {
